--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -14,9 +14,8 @@ html
     link[rel="icon" href="/icon.svg" type="image/svg+xml"]
     link[rel="apple-touch-icon" href="/icon.png"]
 
-    = stylesheet_link_tag :application, "data-turbo-track": "reload"
-    = javascript_include_tag "application", "data-turbo-track": "reload",
-    type: "module"
+    = stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload"
+    = javascript_include_tag "application", "data-turbo-track": "reload"
   body.d-flex.flex-column.h-100
     header
       = render "layouts/shared/nav"
