--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title My Rails Application
+    title = t("application.title")
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     meta[name="apple-mobile-web-app-capable" content="yes"]
     meta[name="mobile-web-app-capable" content="yes"]
@@ -27,4 +27,4 @@ html
         p.text-center.text-muted
           | ©
           = Time.now.year
-          |  My Rails Application
+          |  #{t("application.footer")}
