--- a/app/views/layouts/shared/_flash.html.slim
+++ b/app/views/layouts/shared/_flash.html.slim
@@ -1,5 +1,8 @@
-main.container.mt-4
-  - if notice
-    .alert.alert-success.alert-dismissible.fade.show role="alert"
-      = notice
-      button.btn-close type="button" data-bs-dismiss="alert" aria-label="Close"
+      - if notice
+        .alert.alert-success.alert-dismissible.fade.show role="alert"
+          = notice
+          button.btn-close type="button" data-bs-dismiss="alert"
+      - if alert
+        .alert.alert-danger.alert-dismissible.fade.show role="alert"
+          = alert
+          button.btn-close type="button" data-bs-dismiss="alert"
