--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -1,22 +1,37 @@
-nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-  .container
-    = link_to "Доска объявлений", root_path, class: "navbar-brand"
-
-    button.navbar-toggler type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+nav.navbar.navbar-expand-lg.navbar-light.bg-light
+  .container-fluid
+    = link_to t("nav.brand"), root_path, class: "navbar-brand"
+    button.navbar-toggler type="button" \
+      data-bs-toggle="collapse" \
+      data-bs-target="#navbarNav" \
+      aria-controls="navbarNav" \
+      aria-expanded="false" \
+      aria-label=t("nav.toggle")
       span.navbar-toggler-icon
-
     #navbarNav.collapse.navbar-collapse
       ul.navbar-nav.me-auto
         li.nav-item
-          = link_to "Все объявления", root_path, class: "nav-link"
-
-      ul.navbar-nav.ms-auto
-        - if signed_in?
+          = link_to t("nav.home"), root_path, class: "nav-link"
+        - if current_user
           li.nav-item
-            = link_to "Новое объявление", new_web_bulletin_path, class: "nav-link"
+            = link_to t("nav.profile"), profile_path, class: "nav-link"
+        - if current_user&.admin?
           li.nav-item
-            = link_to "Выйти", auth_logout_path, method: :delete, class: "nav-link"
+            = link_to t("nav.admin"), admin_root_path, class: "nav-link"
+          li.nav-item
+            = link_to t("nav.category"), new_admin_category_path, class: "nav-link"
+      ul.navbar-nav
+        - if current_user
+          li.nav-item
+            = form_with url: auth_logout_path("github"), \
+              method: :delete, class: "d-inline", \
+              data: { turbo: false } do
+              = submit_tag t("nav.logout"), \
+                class: "nav-link btn btn-link p-0 text-decoration-none"
         - else
           li.nav-item
-            = form_with url: auth_request_path("github"), method: :post, class: "d-inline", data: { turbo: false } do
-              = submit_tag "Войти через GitHub", class: "nav-link btn btn-link p-0 text-decoration-none"
+            = form_with url: auth_request_path("github"), \
+              method: :post, class: "d-inline", \
+              data: { turbo: false } do
+              = submit_tag t("nav.login"), \
+                class: "nav-link btn btn-link p-0 text-decoration-none"
