--- a/app/views/web/admin/bulletins/index.html.slim
+++ b/app/views/web/admin/bulletins/index.html.slim
@@ -3,24 +3,44 @@
     .card-header
       h1.mb-0.text-center = t("admin.bulletins.index.title")
     .card-body
-      = search_form_for @q, url: admin_root_path, html: { class: "mb-4" } do |f|
+      = simple_form_for @q, url: admin_root_path, method: :get, html: { class: "mb-4" } do |f|
         .row.g-3.align-items-end
           .col-md-6
-            = f.label :title_or_description_cont, t("admin.bulletins.index.search_label"), class: "form-label"
-            = f.search_field :title_or_description_cont, class: "form-control",
-            placeholder: t("admin.bulletins.index.search_placeholder")
+            = f.input :title_or_description_cont,
+              label: t("admin.bulletins.index.search_label"),
+              placeholder: t("admin.bulletins.index.search_placeholder"),
+              input_html: { class: "form-control" },
+              wrapper_html: { class: "mb-0" },
+              required: false
+
           .col-md-3
-            = f.label :state_eq, t("admin.bulletins.index.state_label"), class: "form-label"
-            = f.select :state_eq, Bulletin.aasm.states.map { |s| [ t("bulletin.states.#{s.name}"), s.name ] },
-            { include_blank: t("admin.bulletins.index.all_states") }, class: "form-select"
+            = f.input :state_eq,
+              label: t("admin.bulletins.index.state_label"),
+              collection: Bulletin.aasm.states.map { |s| [ t("bulletin.states.#{s.name }"), s.name ] },
+              include_blank: t("admin.bulletins.index.all_states"),
+              input_html: { class: "form-select" },
+              wrapper_html: { class: "mb-0" },
+              required: false
+
           .col-md-3
-            = f.label :category_id_eq, t("admin.bulletins.index.category_label"), class: "form-label"
-            = f.collection_select :category_id_eq, Category.all, :id, :name,
-            { include_blank: t("admin.bulletins.index.all_categories") }, class: "form-select"
+            = f.input :category_id_eq,
+              label: t("admin.bulletins.index.category_label"),
+              collection: Category.all,
+              include_blank: t("admin.bulletins.index.all_categories"),
+              input_html: { class: "form-select" },
+              wrapper_html: { class: "mb-0" },
+              required: false
+
           .col-md-3
-            = f.submit t("admin.bulletins.index.search_button"), class: "btn btn-primary w-100", data: { turbo: false }
+            = f.button :submit,
+              t("admin.bulletins.index.search_button"),
+              class: "btn btn-primary w-100",
+              data: { turbo: false }
+
           .col-md-3
-            = link_to t("admin.bulletins.index.reset_button"), admin_root_path, class: "btn btn-secondary w-100"
+            = link_to t("admin.bulletins.index.reset_button"),
+              admin_root_path,
+              class: "btn btn-secondary w-100"
       - if @bulletins.any?
         .table-responsive
           table.table.table-striped.table-hover
