--- a/app/views/web/profiles/show.html.slim
+++ b/app/views/web/profiles/show.html.slim
@@ -3,26 +3,32 @@
     .card-header
       h1.mb-0 = t("profiles.show.title")
     .card-body
-      = search_form_for @q, url: profile_path, html: { class: "mb-4" } do |f|
+      = simple_form_for @q, url: profile_path, method: :get, html: { class: "mb-4" } do |f|
         .row.g-3.align-items-end
           .col-md-6
-            = f.label :title_or_description_cont, \
-              t("profiles.show.search_label"), class: "form-label"
-            = f.search_field :title_or_description_cont, \
-              class: "form-control", \
-              placeholder: t("profiles.show.search_placeholder")
+            = f.input :title_or_description_cont,
+              label: t("profiles.show.search_label"),
+              placeholder: t("profiles.show.search_placeholder"),
+              input_html: { class: "form-control" },
+              wrapper_html: { class: "mb-0" },
+              required: false
           .col-md-3
-            = f.label :state_eq, t("profiles.show.state_label"), \
-              class: "form-label"
-            = f.select :state_eq, \
-              Bulletin.aasm.states.map { |s| [ t("bulletin.states.#{s.name}"), s.name ] }, \
-              { include_blank: t("profiles.show.all_states") }, class: "form-select"
+            = f.input :state_eq,
+              label: t("profiles.show.state_label"),
+              collection: Bulletin.aasm.states.map { |s| [ t("bulletin.states.#{s.name}"), s.name ] },
+              include_blank: t("profiles.show.all_states"),
+              input_html: { class: "form-select" },
+              wrapper_html: { class: "mb-0" },
+              required: false
           .col-md-3
-            = f.submit t("profiles.show.search_button"), \
-              class: "btn btn-primary w-100", data: { turbo: false }
+            = f.button :submit,
+              t("profiles.show.search_button"),
+              class: "btn btn-primary w-100",
+              data: { turbo: false }
           .col-md-3
-            = link_to t("profiles.show.reset_button"), \
-              profile_path, class: "btn btn-secondary w-100"
+            = link_to t("profiles.show.reset_button"),
+              profile_path,
+              class: "btn btn-secondary w-100"
       - if @bulletins.any?
         .row.g-3
           - @bulletins.each do |bulletin|
