--- a/app/views/web/profiles/show.html.slim
+++ b/app/views/web/profiles/show.html.slim
@@ -56,6 +56,9 @@
                         method: :patch, local: true do
                         = submit_tag t("profiles.show.actions.archive"), \
                           class: "btn btn-danger btn-sm", data: { turbo: false }
+                    - if policy(bulletin).edit?
+                      = link_to t("bulletins.index.actions.edit"), edit_bulletin_path(bulletin),
+                      class: "btn btn-secondary ms-2"
         .mt-3
           = paginate @bulletins
       - else
