--- a/app/views/kaminari/_next_page.slim
+++ b/app/views/kaminari/_next_page.slim
@@ -1,3 +1,3 @@
 li.page-item
-  = link_to t("views.pagination.next"), url, rel: "next", remote:,
+  = link_to t('views.pagination.next'), url, rel: 'next', remote:,
   class: "page-link #{'disabled' if current_page.last?}"
