--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -1,30 +1,30 @@
 doctype html
 html
   head
-    title = t("application.title")
-    meta[name="viewport" content="width=device-width,initial-scale=1"]
-    meta[name="apple-mobile-web-app-capable" content="yes"]
-    meta[name="mobile-web-app-capable" content="yes"]
+    title = t('application.title')
+    meta[name='viewport' content='width=device-width,initial-scale=1']
+    meta[name='apple-mobile-web-app-capable' content='yes']
+    meta[name='mobile-web-app-capable' content='yes']
 
     = csrf_meta_tags
     = csp_meta_tag
     = yield :head
 
-    link[rel="icon" href="/icon.png" type="image/png"]
-    link[rel="icon" href="/icon.svg" type="image/svg+xml"]
-    link[rel="apple-touch-icon" href="/icon.png"]
+    link[rel='icon' href='/icon.png' type='image/png']
+    link[rel='icon' href='/icon.svg' type='image/svg+xml']
+    link[rel='apple-touch-icon' href='/icon.png']
 
-    = stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload"
-    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload'
+    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
   body.d-flex.flex-column.h-100
     header
-      = render "layouts/shared/nav"
-      = render "layouts/shared/flash"
+      = render 'layouts/shared/nav'
+      = render 'layouts/shared/flash'
     main.container.mt-4
       = yield
     footer.bg-light.py-3.mt-5
       .container
         p.text-center.text-muted
           | ©
-          = Time.now.year
-          |  #{t("application.footer")}
+          = Time.current.year
+          |  #{t('application.footer')}
