--- a/app/views/web/admin/categories/new.html.slim
+++ b/app/views/web/admin/categories/new.html.slim
@@ -3,5 +3,5 @@
     .col-md-8.col-lg-6
       .card.shadow-sm
         .card-body
-          h1.card-title.text-center.mb-4 = t("categories.edit.title")
-          = render "form"
+          h1.card-title.text-center.mb-4 = t('categories.edit.title')
+          = render 'form'
