--- a/app/views/web/bulletins/show.html.slim
+++ b/app/views/web/bulletins/show.html.slim
@@ -6,18 +6,18 @@
       .row.mb-3
         .col-md-6
           p.mb-2
-            strong = t("bulletins.show.category_label")
+            strong = t('bulletins.show.category_label')
             span.ms-2 = @bulletin.category.name
           p.mb-2
-            strong = t("bulletins.show.author_label")
+            strong = t('bulletins.show.author_label')
             span.ms-2 = @bulletin.user.name || @bulletin.user.email
           p.mb-2
-            strong = t("bulletins.show.state_label")
+            strong = t('bulletins.show.state_label')
             span.ms-2 = t("bulletin.states.#{@bulletin.state}")
         .col-md-6
-          = image_tag @bulletin.image, class: "img-fluid rounded", style: "max-height: 300px; object-fit: contain"
+          = image_tag @bulletin.image, class: 'img-fluid rounded', style: 'max-height: 300px; object-fit: contain'
       .mb-3
-        = simple_format @bulletin.description, class: "text-muted"
+        = simple_format @bulletin.description, class: 'text-muted'
       hr
       .d-flex.gap-2
-        = link_to t("bulletins.show.actions.back"), bulletins_path, class: "btn btn-outline-dark btn-sm"
+        = link_to t('bulletins.show.actions.back'), bulletins_path, class: 'btn btn-outline-dark btn-sm'
