--- a/app/views/web/admin/bulletins/index.html.slim
+++ b/app/views/web/admin/bulletins/index.html.slim
@@ -1,51 +1,16 @@
 .container.mt-4
   .mb-3.d-flex.gap-2.flex-wrap.justify-content-center
-    = link_to t('admin.navigation.all_bulletins'), admin_root_path, class: 'btn btn-outline-primary'
-    = link_to t('admin.navigation.bulletins_only'), admin_bulletins_path, class: 'btn btn-outline-secondary'
+    = link_to t('admin.navigation.all_bulletins'), all_admin_bulletins_path, class: 'btn btn-outline-primary'
+    = link_to t('admin.navigation.bulletins_only'), admin_root_path, class: 'btn btn-outline-secondary'
     = link_to t('admin.navigation.categories'), admin_categories_path, class: 'btn btn-outline-secondary'
+
 .container.mt-4
   .card.mb-4
     .card-header
       h1.mb-0.text-center = t('admin.bulletins.index.title')
     .card-body
-      = simple_form_for @q, url: admin_root_path, method: :get, html: { class: 'mb-4' } do |f|
-        .row.g-3.align-items-end
-          .col-md-6
-            = f.input :title_or_description_cont,
-              label: t('admin.bulletins.index.search_label'),
-              placeholder: t('admin.bulletins.index.search_placeholder'),
-              input_html: { class: 'form-control' },
-              wrapper_html: { class: 'mb-0' },
-              required: false
+      = render 'search_form'
 
-          .col-md-3
-            = f.input :state_eq,
-              label: t('admin.bulletins.index.state_label'),
-              collection: Bulletin.aasm.states.map { |s| [t("bulletin.states.#{s.name}"), s.name] },
-              include_blank: t('admin.bulletins.index.all_states'),
-              input_html: { class: 'form-select' },
-              wrapper_html: { class: 'mb-0' },
-              required: false
-
-          .col-md-3
-            = f.input :category_id_eq,
-              label: t('admin.bulletins.index.category_label'),
-              collection: Category.all,
-              include_blank: t('admin.bulletins.index.all_categories'),
-              input_html: { class: 'form-select' },
-              wrapper_html: { class: 'mb-0' },
-              required: false
-
-          .col-md-3
-            = f.button :submit,
-              t('admin.bulletins.index.search_button'),
-              class: 'btn btn-primary w-100',
-              data: { turbo: false }
-
-          .col-md-3
-            = link_to t('admin.bulletins.index.reset_button'),
-              admin_root_path,
-              class: 'btn btn-secondary w-100'
       - if @bulletins.any?
         .table-responsive
           table.table.table-striped.table-hover
@@ -67,7 +32,7 @@
                   td = t("bulletin.states.#{bulletin.state}")
                   td.d-flex.gap-2.flex-wrap
                     = link_to t('admin.bulletins.index.actions.show'), admin_bulletin_path(bulletin),
-                      class: 'btn btn-info btn-sm'
+                     class: 'btn btn-info btn-sm'
                     - if policy(bulletin).publish?
                       = button_to t('admin.bulletins.show.actions.publish'), [:publish, :admin, bulletin],
                       method: :patch, class: 'btn btn-success btn-sm', data: { turbo: false }
