--- a/app/views/web/admin/bulletins/index.html.slim
+++ b/app/views/web/admin/bulletins/index.html.slim
@@ -35,13 +35,16 @@
                      class: 'btn btn-info btn-sm'
                     - if policy(bulletin).publish?
                       = button_to t('admin.bulletins.show.actions.publish'), [:publish, :admin, bulletin],
-                      method: :patch, class: 'btn btn-success btn-sm', data: { turbo: false }
+                      method: :patch, class: 'btn btn-success btn-sm',
+                      data: { turbo_confirm: t('admin.confirm.publish') }
                     - if policy(bulletin).reject?
                       = button_to t('admin.bulletins.show.actions.reject'), [:reject, :admin, bulletin],
-                      method: :patch, class: 'btn btn-warning btn-sm', data: { turbo: false }
+                      method: :patch, class: 'btn btn-warning btn-sm',
+                      data: { turbo_confirm: t('admin.confirm.reject') }
                     - if policy(bulletin).archive? && bulletin.state != 'archived'
                       = button_to t('admin.bulletins.show.actions.archive'), [:archive, :admin, bulletin],
-                      method: :patch, class: 'btn btn-secondary btn-sm', data: { turbo: false }
+                      method: :patch, class: 'btn btn-secondary btn-sm',
+                      data: { turbo_confirm: t('admin.confirm.archive') }
         .mt-3
           = paginate @bulletins
       - else
