--- a/app/views/web/bulletins/_form.html.slim
+++ b/app/views/web/bulletins/_form.html.slim
@@ -19,7 +19,7 @@
                       as: :text,
                       required: true
 
-            = f.input :category,
+            = f.input :category_id,
                       label: t('simple_form.labels.bulletin.category_id'),
                       collection: Category.all,
                       value_method: :id,
